<resources>
    <string name="refresh_feed">Check for new episodes</string>
    <string name="view_eps">View episodes</string>
    <string name="remove_podcast">Remove Podcast</string>
	<string name="app_name">Pony Express</string>
	<string name="split_app_name">Pony \nExpress</string>
	<string name="mark_listened">Mark as listened</string>
	<string name="mark_not_listened">Mark as not listened</string>
	<string name="download_all">Download all</string>
	<string name="delete_episode">Delete episode from SD Card</string>
	<string name="episodes_stored_dialog">Episodes stored per podcast</string>
	<string name="episodes_stored_title">Episode storage</string>
	<string name="Episodes_title">
		<b>Episodes</b>
	</string>
	<string name="Playlist_title">Playlist</string>
	<string name="Downloads_title">Downloads</string>
	<string name="Identica_group_title">Group Dents</string>
	<string name="Identica_episode_title">Episode Dents</string>
	<string name="sixgun">Sixgun Productions</string>
	<string name="Add_feeds">Add other podcasts.</string>
	<string name="footer">Pony Express is free software:\n Tap here for more information.\n
	\n<b>New media. New rules.</b></string>
	<string name="no_internet_connection">Cannot connect to the Internet. Check your connectivity.</string>
	<string name="cannot_write">Cannot write to the SD Card!</string>
	<string name="setting_up">Setting up PonyExpress. Please wait.</string>
	<string name="checking_sixgun">Checking for new Sixgun.org shows.</string>
	<string name="checking_all">Checking all the feeds for new episodes.</string>
	<string name="please_wait">Another updater is running.  Please wait for it to finish.</string>
	<string name="checking">Checking</string>
	<string name="interent_lost">Internet connectivity was lost during the update.</string>
	<string name="url_offline"> appears to be offline. Please try again later.</string>
	<string  name="not_downloaded_no_internet">Episode not yet downloaded and you have no connectivity.</string>
	<string name="not_downloaded_wrong_network_type">Episode not yet downloaded and you are on a mobile network and have disabled
		downloads unless on WiFi</string>
	<string name="download">Download</string>
	<string name="view">View</string>
	<string name="in_queue">Queued</string>
	<string name="re_download">Re-download</string>
	<string name="listen">Listen</string>
	<string name="dent">Dent about this episode..</string>
	<string name="comment">Comments</string>
	<string name="show_notes">Show notes</string>
	<string name="downloading_episode">1 Podcast downloading.</string>
	<string name="downloading_episodes">Podcasts downloading.</string>
	<string name="verify_creds">Verifying credentials! Please wait&#8230;</string>
	<string name="searching_dents">Searching for dents&#8230;"</string>
	<string name="no_dents">No dents for this episode yet! Go on, be the first!
	</string>
	<string name="can_not_encode_dent">Can not encode your dent.</string>
	<string name="successful_dent">Successful dent!</string>
	<string name="dent_here">Type new dent here:</string>
	<string name="dent_ok">Dent!</string>
	<string name="conn_err_query_failed">Connection error! Cannot get dents.</string>
	<string name="error_generic">Sorry, something has gone wrong&#8230;</string>
	<string name="parse_error">There was a parsing error</string>
	<string name="feed_error">There was an error getting a feed&#8230;</string>
	<string name="malformed_feed">The RSS feed is malformed, data is missing!</string>
	<string name="sending_dent">Sending message, please wait.</string>
	<string name="login_successful">Identi.ca login successful. Dent away!</string>
	<string name="login_failed">Identi.ca login failed! Have you set up your
		account?</string>
	<string name="identica_offline">Identi.ca appears to be offline. Please try again later.</string>
	<string name="credentials_not_verified">Could not verify your credentials!</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="cancel_all">Cancel all downloads</string>
	<string name="enter_username">Username:</string>
	<string name="enter_password">Password:</string>
	<string name="account_setup">Enter your Identi.ca account details.</string>
	<string name="pause">Pause</string>
	<string name="play">Play</string>
	<string name="settings">Settings</string>
	<string name="podcast_settings">Podcast Settings</string>
	<string name="download_settings">Download Settings</string>
	<string name="player_settings">Player Settings</string>
	<string name="add_podcast">Add a podcast</string>
	<string name="identica_account_settings">Setup Identi.ca Account</string>
	<string name="updatefeeds">Refresh subscriptions</string>
	<string name="version">Pony Express Version</string>
	<string name="about">About</string>
	<string name="refresh_feeds">Refresh feeds interval</string>
	<string name="refresh_feeds_summary">Hours between feed refreshes\nNote: This takes effect after the next update.</string>
	<string name="refresh_dialog_title">Interval in hours</string>
	<string name="Feed_uri" >Feed URL:</string>
	<string name="Enter_tag">Identi.ca tag:</string>
	<string name="Enter_group">Identi.ca group:</string>
	<string name="http">http://</string>
	<string name="exclamation">!</string>
	<string name="hash">#</string>
	<string name="move_up">Move up one</string>
	<string name="move_down">Move down one</string>
	<string name="move_top">Move to the top</string>
	<string name="move_bottom">Move to the bottom</string>
	<string name="remove_from_playlist">Remove from playlist</string>
	<string name="youtube_to_playlist">Cannot add YouTube vidoes to a playlist</string>
	<string-array name="eps_to_store">
		<item>2 episodes</item>
		<item>4 episodes</item>
		<item>6 episodes</item>
		<item>8 episodes</item>
		<item>10 episodes</item>
	</string-array>
	<string-array name="seek_time_seconds">
		<item>10 seconds</item>
		<item>20 seconds</item>
		<item>30 seconds</item>
		<item>40 seconds</item>
		<item>50 seconds</item>
		<item>60 seconds</item>
	</string-array>
	<string name="add_episode">Add to playlist</string>
	<string name="view_shownotes">View show notes</string>
	<string name="mark_all_listened">Mark all listened</string>
	<string name="mark_all_not_listened">Mark all not listened</string>
	<string name="new_episodes"> new episodes</string>
	<string name="new_episode">new episode</string>
	<string name="only_on_wifi">Only on Wi-Fi</string>
	<string name="only_on_wifi_summary">Download only when connected with Wi-Fi</string>
	<string name="wifi_only_key">OnlyOnWiFiKey</string>
	<string name="wrong_network_type">You are on a mobile network and have disabled
		downloads unless on WiFi. Check the settings.</string>
	<string name="download_failed">Sorry, there was an error during download.</string>
	<string name="low_space">MB of space left on SD Card.  This may not be enough for the download!</string>
	<string name="delete_failed">Unable to remove the podcast subscription.</string>
	<string name="file_error">There is a problem with this episode.	Long press on the episode name to re-download it.</string>
	<string name="url_error">The url you entered may be incorrect, please try again.</string>
	<string name="adding_podcast">Subscribing to the feed.</string>
	<string name="about_title">About Pony Express</string>
	<string name="draw">Draw!</string>
	<string name="add_sixgun">Add all Sixgun.org shows</string>
	<string name="already_in_db">That podcast is already in the your list.</string>
	<string name="recap_on_resume">Recap on resume</string>
	<string name="recap_on_resume_summary">Rewind 10 seconds before resuming play back</string>
	<string name="r_seek_time_summary">The amount of time to rewind when the rewind button is pushed</string>
	<string name="r_seek_time">Rewind Seek Time</string>
	<string name="ff_seek_time_summary">The amount of time to skip forward when the fast forward button is pushed</string>
	<string name="ff_seek_time">Fast Forward Seek Time</string>
	<string name="auto_download">Auto-downloads</string>
	<string name="auto_download_summary">Automatically download new episodes when adding them to the playlist</string>
	<string name="schedule_downloads">Schedule downloads</string>
	<string name="download_time">Scheduled download time</string>
	<string name="schedule_downloads_summary">Schedule new episodes to download automatically at a preset time</string>
	<string name="no_episodes">The playlist is empty.</string>
	<string name="clear_playlist">Clear the playlist</string>
	<string name="playlist_subtitle_pod">Select podcast&#8230;</string>
	<string name="playlist_subtitle_eps">Select episodes&#8230;</string>
	<string name="not_downloaded_dialog">This episode is not downloaded. Do you want to download it now?</string>
	<string name="always_auto_download">Always auto-download?</string>
	<string name="backup">Backup</string>
	<string name="restore">Restore</string>
	<string name="restoring">Restoring feeds from the backup file.</string>
	<string name="backing_up_feeds">Backing up the list of feeds. Please wait.</string>
	<string name="backup_successful">Backup successful! Yippee ki-yay! </string>
	<string name="a_backup_file_">A backup file already exists. Do you want to overwrite?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="there_is_no_backup">There is no backup file to restore.</string>
	<string name="error_parsing_backup_file">There was an error parsing the backup file. Required data may be missing or corrupt.</string>
	<string name="counter">0:00:00</string>
	<string name="settings_button_desc">Show settings button </string>
	<string name="playlist_button_desc">Show playlist button </string>
	<string name="play_button_desc">Play button </string>
	<string name="rewind_button_desc">Rewind button </string>
	<string name="fastforward_button_desc">Fastforward button </string>
	<string name="start_playlist_button_desc">Start playlist button </string>
	<string name="downloads_button_desc">Show current downloads button </string>
	<string name="error_icon_desc">Error notification icon</string>
	<string name="no_connection_for_sched_download">No internet connection for podcast download.</string>
	<string name="prefs_dont_allow_downloads">Your preferences don\'t allow downloads on a mobile network.</string>
	<string name="alarm_set_to_past">Error: Tried to set downloading in the past.</string>
	<string name="no_youtube">The YouTube app is not installed. Install it to view this video. </string>
	<string name="about_message">
		"
Pony Express is a podcatcher and player for Android brought to you by <a href="http://sixgun.org/ponyexpress">Sixgun Productions</a>. It features integrated commenting using the <a href="http://identi.ca">identi.ca</a> micro-blogging service.
		\n\n
		Code:
		Paul Elms (@scifly)\n\n
		Code contributions from:\n\
		@macno, Daniel Brinkers, Tom Sutch(@tomsutch), Johan Vervloet(@johanv), Andrew Smith, Jamie Daws.
		\n\n
		Design:
		Fabian A. Scherschel (@fabsh)
		\n\n
		Testing:
		Tom Sutch (@tomsutch), x1101 (@x1101) and many others.
		\n\n
		This program is
		<a href="http://www.fsf.org/about/">free software:</a>
		you can redistribute it and/or modify it under the terms of the
		<a href="http://www.gnu.org/licenses/quick-guide-gplv3.html">GNU General Public License</a>
		as published by the Free Software Foundation, either version 3 of the
		License, or (at your option) any later version.
		The source code for Pony Express can be found <a href="https://gitorious.org/ponyexpress/mainline">here</a>.
		"

	</string>
	<string name="ff_seek_time_key">FFSeekTimeKey</string>
	<string name="r_seek_time_key">RSeekTimeKey</string>
	<string name="recap_on_resume_key">RecapOnResumeKey</string>
	<string name="eps_stored_key">epsStoredKey</string>
	<string name="version_key">versionKey</string>
	<string name="update_freqs_key">updateFreqsKey</string>
	<string name="auto_download_key">AutoDownloadKey</string>
</resources>