<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<Preference
		android:key="@string/version_key"
		android:selectable="false"
		android:title="@string/version" />

	<PreferenceCategory android:title="@string/settings">

		<ListPreference
			android:defaultValue="24"
			android:dialogTitle="@string/refresh_dialog_title"
			android:entries="@array/update_freqs"
			android:entryValues="@array/update_freqs"
			android:key="@string/update_freqs_key"
			android:summary="@string/refresh_feeds_summary"
			android:title="@string/refresh_feeds" />

		<ListPreference
			android:defaultValue="6"
			android:dialogTitle="@string/episodes_stored_dialog"
			android:entries="@array/eps_to_store"
			android:entryValues="@array/eps_to_store_values"
			android:key="@string/eps_stored_key"
			android:summary="@string/episodes_stored_dialog"
			android:title="@string/episodes_stored_title" />

		<CheckBoxPreference
			android:defaultValue="true"
			android:key="@string/wifi_only_key"
			android:summary="@string/only_on_wifi_summary"
			android:title="@string/only_on_wifi" />

		<ListPreference
			android:defaultValue="30000"
			android:dialogTitle="@string/r_seek_time"
			android:entries="@array/seek_time_seconds"
			android:entryValues="@array/seek_time_seconds_values"
			android:key="@string/r_seek_time_key"
			android:summary="@string/r_seek_time_summary"
			android:title="@string/r_seek_time" />

		<ListPreference
			android:defaultValue="30000"
			android:dialogTitle="@string/ff_seek_time"
			android:entries="@array/seek_time_seconds"
			android:entryValues="@array/seek_time_seconds_values"
			android:key="@string/ff_seek_time_key"
			android:summary="@string/ff_seek_time_summary"
			android:title="@string/ff_seek_time" />

		<CheckBoxPreference
			android:defaultValue="false"
			android:key="@string/recap_on_resume_key"
			android:summary="@string/recap_on_resume_summary"
			android:title="@string/recap_on_resume" />

		<CheckBoxPreference
			android:defaultValue="false"
			android:key="@string/auto_download_key"
			android:summary="@string/auto_download_summary"
			android:title="@string/auto_download" />
	</PreferenceCategory>

</PreferenceScreen>